Bug fix - footer
Fixed a bug where the footer content was squished together instead of spread apart.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,11 +110,13 @@ footer {
     vertical-align: center;
     justify-content: space-around;
 }
+section {
+    justify-content: center;
+}
 .containerRow {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
 }
 .containerColumn {
     display: flex;
